src/DSLParser/ChaseParser.cpp

// Generated from Chase.g4 by ANTLR 4.9


#include "ChaseListener.h"

#include "ChaseParser.h"


using namespace antlrcpp;
using namespace antlr4;

ChaseParser::ChaseParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ChaseParser::~ChaseParser() {
  delete _interpreter;
}

std::string ChaseParser::getGrammarFileName() const {
  return "Chase.g4";
}

const std::vector<std::string>& ChaseParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ChaseParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ChaseSpecContext ------------------------------------------------------------------

ChaseParser::ChaseSpecContext::ChaseSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::TypesContext* ChaseParser::ChaseSpecContext::types() {
  return getRuleContext<ChaseParser::TypesContext>(0);
}

ChaseParser::ComponentsContext* ChaseParser::ChaseSpecContext::components() {
  return getRuleContext<ChaseParser::ComponentsContext>(0);
}

ChaseParser::ConnectionsContext* ChaseParser::ChaseSpecContext::connections() {
  return getRuleContext<ChaseParser::ConnectionsContext>(0);
}

ChaseParser::RequirementsContext* ChaseParser::ChaseSpecContext::requirements() {
  return getRuleContext<ChaseParser::RequirementsContext>(0);
}

tree::TerminalNode* ChaseParser::ChaseSpecContext::EOF() {
  return getToken(ChaseParser::EOF, 0);
}

ChaseParser::AbbreviationsContext* ChaseParser::ChaseSpecContext::abbreviations() {
  return getRuleContext<ChaseParser::AbbreviationsContext>(0);
}

ChaseParser::AssumptionsContext* ChaseParser::ChaseSpecContext::assumptions() {
  return getRuleContext<ChaseParser::AssumptionsContext>(0);
}


size_t ChaseParser::ChaseSpecContext::getRuleIndex() const {
  return ChaseParser::RuleChaseSpec;
}

void ChaseParser::ChaseSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChaseSpec(this);
}

void ChaseParser::ChaseSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChaseSpec(this);
}

ChaseParser::ChaseSpecContext* ChaseParser::chaseSpec() {
  ChaseSpecContext *_localctx = _tracker.createInstance<ChaseSpecContext>(_ctx, getState());
  enterRule(_localctx, 0, ChaseParser::RuleChaseSpec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    types();
    setState(55);
    components();
    setState(57);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__11) {
      setState(56);
      abbreviations();
    }
    setState(59);
    connections();
    setState(60);
    requirements();
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__14) {
      setState(61);
      assumptions();
    }
    setState(64);
    match(ChaseParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

ChaseParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::TypesKWContext* ChaseParser::TypesContext::typesKW() {
  return getRuleContext<ChaseParser::TypesKWContext>(0);
}

std::vector<ChaseParser::TypeContext *> ChaseParser::TypesContext::type() {
  return getRuleContexts<ChaseParser::TypeContext>();
}

ChaseParser::TypeContext* ChaseParser::TypesContext::type(size_t i) {
  return getRuleContext<ChaseParser::TypeContext>(i);
}


size_t ChaseParser::TypesContext::getRuleIndex() const {
  return ChaseParser::RuleTypes;
}

void ChaseParser::TypesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypes(this);
}

void ChaseParser::TypesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypes(this);
}

ChaseParser::TypesContext* ChaseParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 2, ChaseParser::RuleTypes);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    typesKW();
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(67);
      type();
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

ChaseParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChaseParser::TypeContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

ChaseParser::NameContext* ChaseParser::TypeContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

std::vector<tree::TerminalNode *> ChaseParser::TypeContext::ID() {
  return getTokens(ChaseParser::ID);
}

tree::TerminalNode* ChaseParser::TypeContext::ID(size_t i) {
  return getToken(ChaseParser::ID, i);
}


size_t ChaseParser::TypeContext::getRuleIndex() const {
  return ChaseParser::RuleType;
}

void ChaseParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void ChaseParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

ChaseParser::TypeContext* ChaseParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, ChaseParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    dynamic_cast<TypeContext *>(_localctx)->nam = name();
    setState(73);
    match(ChaseParser::T__0);
    setState(74);
    dynamic_cast<TypeContext *>(_localctx)->typ = match(ChaseParser::ID);
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ChaseParser::T__1) {
      setState(75);
      match(ChaseParser::T__1);
      setState(76);
      dynamic_cast<TypeContext *>(_localctx)->idToken = match(ChaseParser::ID);
      dynamic_cast<TypeContext *>(_localctx)->par.push_back(dynamic_cast<TypeContext *>(_localctx)->idToken);
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ChaseParser::T__2) {
        setState(77);
        match(ChaseParser::T__2);
        setState(78);
        dynamic_cast<TypeContext *>(_localctx)->idToken = match(ChaseParser::ID);
        dynamic_cast<TypeContext *>(_localctx)->par.push_back(dynamic_cast<TypeContext *>(_localctx)->idToken);
        setState(83);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(84);
      match(ChaseParser::T__3);
    }
    setState(87);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentsContext ------------------------------------------------------------------

ChaseParser::ComponentsContext::ComponentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::ComponentsKWContext* ChaseParser::ComponentsContext::componentsKW() {
  return getRuleContext<ChaseParser::ComponentsKWContext>(0);
}

std::vector<ChaseParser::ComponentContext *> ChaseParser::ComponentsContext::component() {
  return getRuleContexts<ChaseParser::ComponentContext>();
}

ChaseParser::ComponentContext* ChaseParser::ComponentsContext::component(size_t i) {
  return getRuleContext<ChaseParser::ComponentContext>(i);
}


size_t ChaseParser::ComponentsContext::getRuleIndex() const {
  return ChaseParser::RuleComponents;
}

void ChaseParser::ComponentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponents(this);
}

void ChaseParser::ComponentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponents(this);
}

ChaseParser::ComponentsContext* ChaseParser::components() {
  ComponentsContext *_localctx = _tracker.createInstance<ComponentsContext>(_ctx, getState());
  enterRule(_localctx, 6, ChaseParser::RuleComponents);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    componentsKW();
    setState(91); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(90);
      component();
      setState(93); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentContext ------------------------------------------------------------------

ChaseParser::ComponentContext::ComponentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChaseParser::ComponentContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

ChaseParser::NameContext* ChaseParser::ComponentContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

tree::TerminalNode* ChaseParser::ComponentContext::NUMBER() {
  return getToken(ChaseParser::NUMBER, 0);
}


size_t ChaseParser::ComponentContext::getRuleIndex() const {
  return ChaseParser::RuleComponent;
}

void ChaseParser::ComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponent(this);
}

void ChaseParser::ComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponent(this);
}

ChaseParser::ComponentContext* ChaseParser::component() {
  ComponentContext *_localctx = _tracker.createInstance<ComponentContext>(_ctx, getState());
  enterRule(_localctx, 8, ChaseParser::RuleComponent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    dynamic_cast<ComponentContext *>(_localctx)->nam = name();
    setState(96);
    match(ChaseParser::T__0);
    setState(99);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::NUMBER: {
        setState(97);
        dynamic_cast<ComponentContext *>(_localctx)->num = match(ChaseParser::NUMBER);
        break;
      }

      case ChaseParser::T__4: {
        setState(98);
        match(ChaseParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(101);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

ChaseParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ChaseParser::NameContext::ID() {
  return getTokens(ChaseParser::ID);
}

tree::TerminalNode* ChaseParser::NameContext::ID(size_t i) {
  return getToken(ChaseParser::ID, i);
}

tree::TerminalNode* ChaseParser::NameContext::NUMBER() {
  return getToken(ChaseParser::NUMBER, 0);
}


size_t ChaseParser::NameContext::getRuleIndex() const {
  return ChaseParser::RuleName;
}

void ChaseParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void ChaseParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}

ChaseParser::NameContext* ChaseParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 10, ChaseParser::RuleName);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(104); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(103);
          dynamic_cast<NameContext *>(_localctx)->idToken = match(ChaseParser::ID);
          dynamic_cast<NameContext *>(_localctx)->comp.push_back(dynamic_cast<NameContext *>(_localctx)->idToken);
          setState(106); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ChaseParser::ID);
        setState(109);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ChaseParser::NUMBER) {
          setState(108);
          dynamic_cast<NameContext *>(_localctx)->num = match(ChaseParser::NUMBER);
        }
        break;
      }

      case ChaseParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(111);
        dynamic_cast<NameContext *>(_localctx)->num = match(ChaseParser::NUMBER);
        setState(113); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(112);
          dynamic_cast<NameContext *>(_localctx)->idToken = match(ChaseParser::ID);
          dynamic_cast<NameContext *>(_localctx)->comp.push_back(dynamic_cast<NameContext *>(_localctx)->idToken);
          setState(115); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == ChaseParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AbbreviationsContext ------------------------------------------------------------------

ChaseParser::AbbreviationsContext::AbbreviationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::AbbreviationsKWContext* ChaseParser::AbbreviationsContext::abbreviationsKW() {
  return getRuleContext<ChaseParser::AbbreviationsKWContext>(0);
}

std::vector<ChaseParser::AbbrevContext *> ChaseParser::AbbreviationsContext::abbrev() {
  return getRuleContexts<ChaseParser::AbbrevContext>();
}

ChaseParser::AbbrevContext* ChaseParser::AbbreviationsContext::abbrev(size_t i) {
  return getRuleContext<ChaseParser::AbbrevContext>(i);
}


size_t ChaseParser::AbbreviationsContext::getRuleIndex() const {
  return ChaseParser::RuleAbbreviations;
}

void ChaseParser::AbbreviationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbbreviations(this);
}

void ChaseParser::AbbreviationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbbreviations(this);
}

ChaseParser::AbbreviationsContext* ChaseParser::abbreviations() {
  AbbreviationsContext *_localctx = _tracker.createInstance<AbbreviationsContext>(_ctx, getState());
  enterRule(_localctx, 12, ChaseParser::RuleAbbreviations);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    abbreviationsKW();
    setState(121); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(120);
      abbrev();
      setState(123); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AbbrevContext ------------------------------------------------------------------

ChaseParser::AbbrevContext::AbbrevContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChaseParser::AbbrevContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

ChaseParser::NameContext* ChaseParser::AbbrevContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}

tree::TerminalNode* ChaseParser::AbbrevContext::ID() {
  return getToken(ChaseParser::ID, 0);
}


size_t ChaseParser::AbbrevContext::getRuleIndex() const {
  return ChaseParser::RuleAbbrev;
}

void ChaseParser::AbbrevContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbbrev(this);
}

void ChaseParser::AbbrevContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbbrev(this);
}

ChaseParser::AbbrevContext* ChaseParser::abbrev() {
  AbbrevContext *_localctx = _tracker.createInstance<AbbrevContext>(_ctx, getState());
  enterRule(_localctx, 14, ChaseParser::RuleAbbrev);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    dynamic_cast<AbbrevContext *>(_localctx)->nam = name();
    setState(126);
    match(ChaseParser::T__0);
    setState(127);
    dynamic_cast<AbbrevContext *>(_localctx)->abbr = match(ChaseParser::ID);
    setState(128);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConnectionsContext ------------------------------------------------------------------

ChaseParser::ConnectionsContext::ConnectionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::ConnectionsKWContext* ChaseParser::ConnectionsContext::connectionsKW() {
  return getRuleContext<ChaseParser::ConnectionsKWContext>(0);
}

std::vector<ChaseParser::ConnContext *> ChaseParser::ConnectionsContext::conn() {
  return getRuleContexts<ChaseParser::ConnContext>();
}

ChaseParser::ConnContext* ChaseParser::ConnectionsContext::conn(size_t i) {
  return getRuleContext<ChaseParser::ConnContext>(i);
}

std::vector<ChaseParser::SwitchedContext *> ChaseParser::ConnectionsContext::switched() {
  return getRuleContexts<ChaseParser::SwitchedContext>();
}

ChaseParser::SwitchedContext* ChaseParser::ConnectionsContext::switched(size_t i) {
  return getRuleContext<ChaseParser::SwitchedContext>(i);
}

std::vector<ChaseParser::UnswitchedContext *> ChaseParser::ConnectionsContext::unswitched() {
  return getRuleContexts<ChaseParser::UnswitchedContext>();
}

ChaseParser::UnswitchedContext* ChaseParser::ConnectionsContext::unswitched(size_t i) {
  return getRuleContext<ChaseParser::UnswitchedContext>(i);
}


size_t ChaseParser::ConnectionsContext::getRuleIndex() const {
  return ChaseParser::RuleConnections;
}

void ChaseParser::ConnectionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConnections(this);
}

void ChaseParser::ConnectionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConnections(this);
}

ChaseParser::ConnectionsContext* ChaseParser::connections() {
  ConnectionsContext *_localctx = _tracker.createInstance<ConnectionsContext>(_ctx, getState());
  enterRule(_localctx, 16, ChaseParser::RuleConnections);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    connectionsKW();
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ChaseParser::ID

    || _la == ChaseParser::NUMBER) {
      setState(131);
      conn();
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(148);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ChaseParser::T__15

    || _la == ChaseParser::T__16) {
      setState(139);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ChaseParser::T__15: {
          setState(137);
          switched();
          break;
        }

        case ChaseParser::T__16: {
          setState(138);
          unswitched();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(142); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(141);
        conn();
        setState(144); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == ChaseParser::ID

      || _la == ChaseParser::NUMBER);
      setState(150);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SwitchedContext ------------------------------------------------------------------

ChaseParser::SwitchedContext::SwitchedContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::SwitchedKWContext* ChaseParser::SwitchedContext::switchedKW() {
  return getRuleContext<ChaseParser::SwitchedKWContext>(0);
}

ChaseParser::NameContext* ChaseParser::SwitchedContext::name() {
  return getRuleContext<ChaseParser::NameContext>(0);
}


size_t ChaseParser::SwitchedContext::getRuleIndex() const {
  return ChaseParser::RuleSwitched;
}

void ChaseParser::SwitchedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSwitched(this);
}

void ChaseParser::SwitchedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSwitched(this);
}

ChaseParser::SwitchedContext* ChaseParser::switched() {
  SwitchedContext *_localctx = _tracker.createInstance<SwitchedContext>(_ctx, getState());
  enterRule(_localctx, 18, ChaseParser::RuleSwitched);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    switchedKW();
    setState(152);
    match(ChaseParser::T__1);
    setState(153);
    dynamic_cast<SwitchedContext *>(_localctx)->sw = name();
    setState(154);
    match(ChaseParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnswitchedContext ------------------------------------------------------------------

ChaseParser::UnswitchedContext::UnswitchedContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ChaseParser::UnswitchedKWContext* ChaseParser::UnswitchedContext::unswitchedKW() {
  return getRuleContext<ChaseParser::UnswitchedKWContext>(0);
}


size_t ChaseParser::UnswitchedContext::getRuleIndex() const {
  return ChaseParser::RuleUnswitched;
}

void ChaseParser::UnswitchedContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnswitched(this);
}

void ChaseParser::UnswitchedContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnswitched(this);
}

ChaseParser::UnswitchedContext* ChaseParser::unswitched() {
  UnswitchedContext *_localctx = _tracker.createInstance<UnswitchedContext>(_ctx, getState());
  enterRule(_localctx, 20, ChaseParser::RuleUnswitched);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    unswitchedKW();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Undirected_connContext ------------------------------------------------------------------

ChaseParser::Undirected_connContext::Undirected_connContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChaseParser::Undirected_connContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

std::vector<ChaseParser::NameContext *> ChaseParser::Undirected_connContext::name() {
  return getRuleContexts<ChaseParser::NameContext>();
}

ChaseParser::NameContext* ChaseParser::Undirected_connContext::name(size_t i) {
  return getRuleContext<ChaseParser::NameContext>(i);
}


size_t ChaseParser::Undirected_connContext::getRuleIndex() const {
  return ChaseParser::RuleUndirected_conn;
}

void ChaseParser::Undirected_connContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUndirected_conn(this);
}

void ChaseParser::Undirected_connContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ChaseListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUndirected_conn(this);
}

ChaseParser::Undirected_connContext* ChaseParser::undirected_conn() {
  Undirected_connContext *_localctx = _tracker.createInstance<Undirected_connContext>(_ctx, getState());
  enterRule(_localctx, 22, ChaseParser::RuleUndirected_conn);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    dynamic_cast<Undirected_connContext *>(_localctx)->from = name();
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChaseParser::T__5: {
        setState(159);
        match(ChaseParser::T__5);
        break;
      }

      case ChaseParser::T__6: {
        setState(160);
        match(ChaseParser::T__6);
        setState(161);
        match(ChaseParser::T__1);
        setState(162);
        dynamic_cast<Undirected_connContext *>(_localctx)->sw = name();
        setState(163);
        match(ChaseParser::T__3);
        setState(164);
        match(ChaseParser::T__6);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(168);
    dynamic_cast<Undirected_connContext *>(_localctx)->to = name();
    setState(169);
    match(ChaseParser::ENDST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Directed_connContext ------------------------------------------------------------------

ChaseParser::Directed_connContext::Directed_connContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChaseParser::Directed_connContext::ENDST() {
  return getToken(ChaseParser::ENDST, 0);
}

std::vector<ChaseParser::NameContext *> ChaseParser::Directed_connContext::name() {
  return getRuleContexts<ChaseParser::NameContext>();
}

ChaseParser::NameContext* ChaseParser::Directed_connContext::name(size_t i) {
  return getRuleContext<ChaseParser::NameContext>(i);
}


size_t ChaseParser::Directed_connContext::getRuleIndex() const {
  return ChaseParser::RuleDirected_conn;
}
